--- a/prroject/study.html
+++ b/prroject/study.html
@@ -41,16 +41,16 @@
                 </ul>
                 <p class="topic">Сигналы, интерфейсы, протоколы</p>
                 <ul>
-                    <li class="color-change"><a href="#" data-id=14 class="small-topic">Аналоговый сигнал</a></li>
+                    <!-- <li class="color-change"><a href="#" data-id=14 class="small-topic">Аналоговый сигнал</a></li>
                     <li class="color-change"><a href="#" data-id=15 class="small-topic">Цифровой сигнал</a></li>
-                    <li class="color-change"><a href="#" data-id=16 class="small-topic">Датчики и сенсоры: теория</a></li>
+                    <li class="color-change"><a href="#" data-id=16 class="small-topic">Датчики и сенсоры: теория</a></li> -->
                     <li class="color-change"><a href="#" data-id=17 class="small-topic">Широтно-импульсная модуляция (ШИМ, PWM)</a></li>
                 </ul>
-                <p class="topic">Механика</p>
+                <!-- <p class="topic">Механика</p>
                 <ul>
                     <li class="color-change"><a href="#" data-id=18 class="small-topic">Коллекторный двигатель</a></li>
                     <li class="color-change"><a href="#" data-id=19 class="small-topic">Сервопривод</a></li>
-                </ul>
+                </ul> -->
                 <p class="topic">Программирование на C++</p>
                 <ul>
                     <li class="color-change"><a href="#" data-id=20 class="small-topic">Языки программирования: обзор</a></li>
