--- a/prroject/study.html
+++ b/prroject/study.html
@@ -25,33 +25,35 @@
                     <li class="color-change"><a href="#" data-id=1 class="small-topic">Принципиальные схемы</a></li>
                     <li class="color-change"><a href="#" data-id=2 class="small-topic">Основные законы электричества</a></li>
                     <li class="color-change"><a href="#" data-id=3 class="small-topic">Управление электричеством</a></li>
-                    <li class="color-change"><a href="#" data-id=4 class="small-topic">Делитель напряжения</a></li>
+                    <li class="color-change"><a href="#" data-id=4 class="small-topic">Быстрая сборка схем</a></li>
+                    <li class="color-change"><a href="#" data-id=5 class="small-topic">Делитель напряжения</a></li>
                 </ul>
                 <p class="topic">Компоненты</p>
                 <ul>
-                    <li class="color-change"><a href="#" data-id=5 class="small-topic">Конденсатор</a></li>
-                    <li class="color-change"><a href="#" data-id=6 class="small-topic">Резистор</a></li>
-                    <li class="color-change"><a href="#" data-id=7 class="small-topic">Диод</a></li>
-                    <li class="color-change"><a href="#" data-id=8 class="small-topic">Светодиод</a></li>
-                    <li class="color-change"><a href="#" data-id=9 class="small-topic">Кнопка</a></li>
-                    <li class="color-change"><a href="#" data-id=10 class="small-topic">Светодиодные сборки</a></li>
-                    <li class="color-change"><a href="#" data-id=11 class="small-topic">Биполярный транзистор</a></li>
-                    <li class="color-change"><a href="#" data-id=12 class="small-topic">Полевой транзистор</a></li>
-                    <li class="color-change"><a href="#" data-id=13 class="small-topic">Пьезодинамик</a></li>
+                    <li class="color-change"><a href="#" data-id=6 class="small-topic">Конденсатор</a></li>
+                    <li class="color-change"><a href="#" data-id=7 class="small-topic">Резистор</a></li>
+                    <li class="color-change"><a href="#" data-id=8 class="small-topic">Диод</a></li>
+                    <li class="color-change"><a href="#" data-id=9 class="small-topic">Светодиод</a></li>
+                    <li class="color-change"><a href="#" data-id=10 class="small-topic">Кнопка</a></li>
+                    <li class="color-change"><a href="#" data-id=11 class="small-topic">Светодиодные сборки</a></li>
+                    <li class="color-change"><a href="#" data-id=12 class="small-topic">Биполярный транзистор</a></li>
+                    <li class="color-change"><a href="#" data-id=13 class="small-topic">Полевой транзистор</a></li>
+                    <li class="color-change"><a href="#" data-id=14 class="small-topic">Пьезодинамик</a></li>
+                    <li class="color-change"><a href="#" data-id=15 class="small-topic">Мотор</a></li>
                 </ul>
                 <p class="topic">Сигналы, интерфейсы, протоколы</p>
                 <ul>
-                    <!-- <li class="color-change"><a href="#" data-id=14 class="small-topic">Аналоговый сигнал</a></li>
-                    <li class="color-change"><a href="#" data-id=15 class="small-topic">Цифровой сигнал</a></li>
-                    <li class="color-change"><a href="#" data-id=16 class="small-topic">Датчики и сенсоры: теория</a></li> -->
-                    <li class="color-change"><a href="#" data-id=17 class="small-topic">Широтно-импульсная модуляция (ШИМ, PWM)</a></li>
+                    <!-- <li class="color-change"><a href="#" data-id=15 class="small-topic">Аналоговый сигнал</a></li>
+                    <li class="color-change"><a href="#" data-id=16 class="small-topic">Цифровой сигнал</a></li>
+                    <li class="color-change"><a href="#" data-id=17 class="small-topic">Датчики и сенсоры: теория</a></li> -->
+                    <li class="color-change"><a href="#" data-id=16 class="small-topic">Широтно-импульсная модуляция (ШИМ, PWM)</a></li>
                 </ul>
                 <!-- <p class="topic">Механика</p>
                 <ul>
                     <li class="color-change"><a href="#" data-id=18 class="small-topic">Коллекторный двигатель</a></li>
                     <li class="color-change"><a href="#" data-id=19 class="small-topic">Сервопривод</a></li>
                 </ul> -->
-                <p class="topic">Программирование на C++</p>
+                <!-- <p class="topic">Программирование на C++</p>
                 <ul>
                     <li class="color-change"><a href="#" data-id=20 class="small-topic">Языки программирования: обзор</a></li>
                     <li class="color-change"><a href="#" data-id=21 class="small-topic">Структуры программы C++ для Arduino</a></li>
@@ -59,7 +61,7 @@
                     <li class="color-change"><a href="#" data-id=23 class="small-topic">Логические пременные, выражения if, ветвление</a></li>
                     <li class="color-change"><a href="#" data-id=24 class="small-topic">Конечные автоматы, пречисление enum, выражения switch</a></li>
                     <li class="color-change"><a href="#" data-id=25 class="small-topic">Случайные числа</a></li>
-                </ul>
+                </ul> -->
             </aside>
             <section class="topic-content"></section>
         <!-- </section> -->
